# raytracing-practice

./: CMakeLists.txt  README.md
_cmake/: stb.cmake
src/: main.cpp
src/accelerator/: aabb.hpp  bvh_node.hpp
src/common/: color.hpp  interval.hpp  ray.hpp  rtweekend.hpp  vec3.hpp
src/core/: camera.hpp  color.hpp  material.hpp  perlin.hpp  rtw_stb_image.hpp  texture.hpp  vec3.hpp
src/hittable/: hittable.hpp  hittable_list.hpp  quad.hpp  sphere.hpp
